fixed slider layout issue

--- a/style.css
+++ b/style.css
@@ -215,6 +215,12 @@ ul{
 
 .hero-content{
     max-width:650px;
+    .hero-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 }
 
 .hero-content h4{
